@@ -52,6 +52,8 @@ export(discreteNameToValue)
 export(discreteValueToName)
 export(dropParams)
 export(filterParams)
+export(filterParamsDiscrete)
+export(filterParamsNumeric)
 export(generateDesign)
 export(generateGridDesign)
 export(generateRandomDesign)
